[project]
name = "bolig_ping"
version = "1.1.0"
description = "Get a ping when your dream flat becomes available."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Nielsen", email = "saattrupdan@gmail.com"},
]
maintainers = [
    {name = "Dan Saattrup Nielsen", email = "saattrupdan@gmail.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "tqdm>=4.67.1",
    "yagmail>=0.15.293",
]

[project.urls]
Repository = "https://github.com/saattrupdan/bolig_ping"
Issues = "https://github.com/saattrupdan/bolig_ping/issues"

[project.license]
file = "LICENSE"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "readme-coverage-badger>=0.1.2",
    "click>=8.1.7",
    "ruff>=0.11.1",
    "mypy>=1.15.0",
    "nbstripout>=0.8.1",
    "coverage>=5.5",
    "mkdocs-material>=9.5.45",
    "mkdocs-include-markdown-plugin>=7.0.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=3.0.22",
    "pip>=24.3.1",
]

[project.scripts]
bolig_ping = "bolig_ping.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for **kwargs
    "ANN003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/bolig_ping',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/bolig_ping",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
